- [BUG FIX] When the doAfterCopyInDB method calls, copied record information didn't pass to it.
- [BUG FIX] The $sendMailCompatibilityMode variable didn't affected.
- [BUG FIX] The templating feature uses in email arose an error about array index and stop the processing in some case.

Ver.7 (March 20, 2021)
- The synchronizing with clients is back without Pusher.
- The FileMaker_DataAPI class updated for API protocol ver.2. And also introduced the 'portals' key on context definitions.
- CSV File uploading and add records for each line. I'd like to check the 'samples/Sample_webpage/fileuploadCSV_MySQL.html'
  file or the Sample page > JS Components > jQuery FileUploader > CSV file upload with jQuery_File_Upload.
- If setting INTERMediator.alwaysAddOperationExchange to true, the local context criteria combine logical
  expressions with AND operator.
- The font-weight of the css * target changed from lighter to non description for adjusting the Android.
- The method INTERMediatorOnPage.doAfterDeleteRecord can define. One parameter is going to pass the context name.
- The 'ignoring-field' key can be defined in a context definition and it ignores any fields in the array value
  to check to include the field in the result.
- The processing for 'data-im-group' attributes was eliminated in updating to Ver.6.
  Some method handling these attributes removed.
- The script 'dist-docs/buildup.sh' can exclude JSEncrypt and Socket.io in the generated js file.
- Update deploy.sh and Vagrantfile etc. for the INTER-Mediator-Server VM (Change to CentOS Linux 7).
- [BUG FIX] The variable name '$follwingTimezones' in the params.php file was typo at all!
  Change it to $followingTimezones.
- [BUG FIX] A calculation which refers to other context as like 'product@unitprice' detected wrong record.
  Now any term in expressions having 'context@field' style refers to the 'relation' setting in the context definition.
  If there is no associated record, It corrects any 'context' in the page.
