@@ -1,7 +1,7 @@
 {
   "name": "inter-mediator/inter-mediator",
   "version": "8",
-  "time": "2021-07-03",
+  "time": "2021-07-17",
   "repositories": [
     {
       "type": "git",
